Upload Markov Processes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.1.0
 appdirs==1.4.4
 appnope==0.1.0
 argon2-cffi==20.1.0
@@ -8,12 +9,18 @@ certifi==2020.6.20
 cffi==1.14.5
 chardet==3.0.4
 charset-normalizer==2.0.4
+chex==0.1.85
 click==8.0.1
+cloudpickle==3.0.0
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
+distrax==0.1.5
+dm-tree==0.1.8
+engineering-notation==0.10.0
 entrypoints==0.3
 flake8==3.8.2
+gast==0.5.4
 graphviz==0.14
 idna==2.10
 ipykernel==5.3.0
@@ -54,6 +61,7 @@ parso==0.7.0
 pathspec==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
+plotext==5.2.8
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
@@ -73,14 +81,17 @@ requests==2.31.0
 scipy==1.11.4
 Send2Trash==1.5.0
 six==1.15.0
+tensorflow-probability==0.23.0
 terminado==0.8.3
 testpath==0.4.4
+tk-tools==0.16.0
 toml==0.10.2
 tomli==2.0.1
+toolz==0.12.1
 tornado==6.0.4
 traitlets==4.3.3
 typed-ast==1.5.0
-typing-extensions==3.7.4.3
+typing_extensions==4.9.0
 urllib3==1.26.6
 wcwidth==0.1.9
 webencodings==0.5.1
