--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ jupyter-client==6.1.3
 jupyter-console==6.1.0
 jupyter-core==4.6.3
 kiwisolver==1.2.0
+llvmlite==0.42.0
 loguru==0.7.2
 lxml==4.6.2
 MarkupSafe==2.0.1
@@ -50,6 +51,7 @@ mypy-extensions==0.4.3
 nbconvert==5.6.1
 nbformat==5.0.6
 notebook==6.1.5
+numba==0.59.0
 numpy==1.26.3
 openai==0.2.4
 opt-einsum==3.3.0
